test/classes/initializers/records/checking-copies-bad.good
checking-copies-bad.chpl:13: In function 'main':
checking-copies-bad.chpl:15: error: copy-initialization invoked for a type that does not have a copy initializer
